[tool.poetry]
name = "dtmf-py"
version = "0.1.0"
description = "DTMF (rfc2833) generator"
authors = ["Dmitriy Noskov <pesycorm@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
rtp = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
